# mkemorgn.com

./: .gitignore  README.md  config.toml
backend/: Cargo.toml  docker-compose.yml
backend/migrations/2023-11-22-163710_create_trips/: up.sql
backend/src/: handlers.rs  main.rs  models.rs  schema.rs
content/: _index.md  about.md
content/about/: _index.md
content/code/: _index.md  linux.md  randrest.md  site.md
content/contact/: _index.md
content/photography/: _index.md  denver20.md  detroit20.md
content/photos/: _index.md  denver20.md  detroit20.md  la21.md
content/programming/: _index.md  linux.md  randrest.md  site.md
content/projects/: _index.md
content/store/: _index.md
content/thoughts/: _index.md
content/trips/: _index.md  austin22.md  boston22.md  chicago22.md  denver20.md  detroit20.md  houston21.md  la21.md  new_orleans21.md  sd23.md
public/: main.css  search_index.en.js  style.css
sass/: 2  style.scss
sass/components/: _navbar.scss
sass/pages/: _about.scss  _contact.scss  _landing.scss  _trip_page.scss  _trips.scss
static/js/: main.js
templates/: about.html  austin2022.html  base.html  boston2022.html  chicago2022.html  code.html  contact.html  denver2020.html  detroit2020.html  houston2021.html  index.html  la2021.html  linux.html  macros.html  navbar.html  new-orleans2021.html  page.html  photo-page.html  photo.html  photos.html  projects.html  random_restaurant.html  sd2023.html  site.html  store.html  thoughts.html  trips.html
